@@ -22,6 +22,7 @@ import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InaccessibleObjectException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Member;
 import java.lang.reflect.Method;
@@ -60,7 +61,7 @@ public class ReflectUtils {
 
 	private static final ProtectionDomain PROTECTION_DOMAIN;
 
-	private static final List<Method> OBJECT_METHODS = new ArrayList<Method>();
+	private static final List<Method> OBJECT_METHODS = new ArrayList<>();
 
 	private static BiConsumer<String, byte[]> generatedClassHandler;
 
@@ -74,7 +75,7 @@ public class ReflectUtils {
 		Throwable throwable = null;
 		try {
 			classLoaderDefineClass = ClassLoader.class.getDeclaredMethod("defineClass",
-							String.class, byte[].class, Integer.TYPE, Integer.TYPE, ProtectionDomain.class);
+					String.class, byte[].class, Integer.TYPE, Integer.TYPE, ProtectionDomain.class);
 		}
 		catch (Throwable t) {
 			classLoaderDefineClass = null;
@@ -125,11 +126,11 @@ public class ReflectUtils {
 	}
 
 	public static Type[] getExceptionTypes(Member member) {
-		if (member instanceof Method) {
-			return TypeUtils.getTypes(((Method) member).getExceptionTypes());
+		if (member instanceof Method method) {
+			return TypeUtils.getTypes(method.getExceptionTypes());
 		}
-		else if (member instanceof Constructor) {
-			return TypeUtils.getTypes(((Constructor) member).getExceptionTypes());
+		else if (member instanceof Constructor<?> constructor) {
+			return TypeUtils.getTypes(constructor.getExceptionTypes());
 		}
 		else {
 			throw new IllegalArgumentException("Cannot get exception types of a field");
@@ -137,14 +138,13 @@ public class ReflectUtils {
 	}
 
 	public static Signature getSignature(Member member) {
-		if (member instanceof Method) {
-			return new Signature(member.getName(), Type.getMethodDescriptor((Method) member));
+		if (member instanceof Method method) {
+			return new Signature(member.getName(), Type.getMethodDescriptor(method));
 		}
-		else if (member instanceof Constructor) {
-			Type[] types = TypeUtils.getTypes(((Constructor) member).getParameterTypes());
+		else if (member instanceof Constructor<?> constructor) {
+			Type[] types = TypeUtils.getTypes(constructor.getParameterTypes());
 			return new Signature(Constants.CONSTRUCTOR_NAME,
 					Type.getMethodDescriptor(Type.VOID_TYPE, types));
-
 		}
 		else {
 			throw new IllegalArgumentException("Cannot get signature of a field");
@@ -230,9 +230,9 @@ public class ReflectUtils {
 		}
 		catch (ClassNotFoundException ignore) {
 		}
-		for (int i = 0; i < packages.length; i++) {
+		for (String pkg : packages) {
 			try {
-				return Class.forName(prefix + packages[i] + '.' + className + suffix, false, loader);
+				return Class.forName(prefix + pkg + '.' + className + suffix, false, loader);
 			}
 			catch (ClassNotFoundException ignore) {
 			}
@@ -274,10 +274,7 @@ public class ReflectUtils {
 			Object result = cstruct.newInstance(args);
 			return result;
 		}
-		catch (InstantiationException e) {
-			throw new CodeGenerationException(e);
-		}
-		catch (IllegalAccessException e) {
+		catch (InstantiationException | IllegalAccessException e) {
 			throw new CodeGenerationException(e);
 		}
 		catch (InvocationTargetException e) {
@@ -302,8 +299,9 @@ public class ReflectUtils {
 	}
 
 	public static String[] getNames(Class[] classes) {
-		if (classes == null)
+		if (classes == null) {
 			return null;
+		}
 		String[] names = new String[classes.length];
 		for (int i = 0; i < names.length; i++) {
 			names[i] = classes[i].getName();
@@ -329,8 +327,7 @@ public class ReflectUtils {
 
 	public static Method[] getPropertyMethods(PropertyDescriptor[] properties, boolean read, boolean write) {
 		Set methods = new HashSet();
-		for (int i = 0; i < properties.length; i++) {
-			PropertyDescriptor pd = properties[i];
+		for (PropertyDescriptor pd : properties) {
 			if (read) {
 				methods.add(pd.getReadMethod());
 			}
@@ -362,8 +359,7 @@ public class ReflectUtils {
 				return all;
 			}
 			List properties = new ArrayList(all.length);
-			for (int i = 0; i < all.length; i++) {
-				PropertyDescriptor pd = all[i];
+			for (PropertyDescriptor pd : all) {
 				if ((read && pd.getReadMethod() != null) ||
 						(write && pd.getWriteMethod() != null)) {
 					properties.add(pd);
@@ -396,16 +392,17 @@ public class ReflectUtils {
 		if (type == Object.class) {
 			list.addAll(OBJECT_METHODS);
 		}
-		else
+		else {
 			list.addAll(java.util.Arrays.asList(type.getDeclaredMethods()));
+		}
 
 		Class superclass = type.getSuperclass();
 		if (superclass != null) {
 			addAllMethods(superclass, list);
 		}
 		Class[] interfaces = type.getInterfaces();
-		for (int i = 0; i < interfaces.length; i++) {
-			addAllMethods(interfaces[i], list);
+		for (Class element : interfaces) {
+			addAllMethods(element, list);
 		}
 
 		return list;
@@ -512,13 +509,13 @@ public class ReflectUtils {
 				catch (InvocationTargetException ex) {
 					throw new CodeGenerationException(ex.getTargetException());
 				}
-				catch (Throwable ex) {
-					// Fall through if setAccessible fails with InaccessibleObjectException on JDK 9+
-					// (on the module path and/or with a JVM bootstrapped with --illegal-access=deny)
-					if (!ex.getClass().getName().endsWith("InaccessibleObjectException")) {
-						throw new CodeGenerationException(ex);
-					}
+				catch (InaccessibleObjectException ex) {
+					// setAccessible failed with JDK 9+ InaccessibleObjectException -> fall through
+					// Avoid through JVM startup with --add-opens=java.base/java.lang=ALL-UNNAMED
 					t = ex;
+				}
+				catch (Throwable ex) {
+					throw new CodeGenerationException(ex);
 				}
 			}
 		}
@@ -529,13 +526,14 @@ public class ReflectUtils {
 				MethodHandles.Lookup lookup = MethodHandles.privateLookupIn(contextClass, MethodHandles.lookup());
 				c = lookup.defineClass(b);
 			}
-			catch (IllegalAccessException ex) {
+			catch (LinkageError | IllegalAccessException ex) {
 				throw new CodeGenerationException(ex) {
 					@Override
 					public String getMessage() {
 						return "ClassLoader mismatch for [" + contextClass.getName() +
 								"]: JVM should be started with --add-opens=java.base/java.lang=ALL-UNNAMED " +
-								"for ClassLoader.defineClass to be accessible on " + loader.getClass().getName();
+								"for ClassLoader.defineClass to be accessible on " + loader.getClass().getName() +
+								"; consider co-locating the affected class in that target ClassLoader instead.";
 					}
 				};
 			}
@@ -546,7 +544,15 @@ public class ReflectUtils {
 
 		// No defineClass variant available at all?
 		if (c == null) {
-			throw new CodeGenerationException(t);
+			throw new CodeGenerationException(t) {
+				@Override
+				public String getMessage() {
+					return "No compatible defineClass mechanism detected: " +
+							"JVM should be started with --add-opens=java.base/java.lang=ALL-UNNAMED " +
+							"for ClassLoader.defineClass to be accessible. On the module path, " +
+							"you may not be able to define this CGLIB-generated class at all.";
+				}
+			};
 		}
 
 		// Force static initializers to run.
@@ -584,20 +590,25 @@ public class ReflectUtils {
 		return new MethodInfo() {
 			private ClassInfo ci;
 
+			@Override
 			public ClassInfo getClassInfo() {
-				if (ci == null)
+				if (ci == null) {
 					ci = ReflectUtils.getClassInfo(member.getDeclaringClass());
+				}
 				return ci;
 			}
 
+			@Override
 			public int getModifiers() {
 				return modifiers;
 			}
 
+			@Override
 			public Signature getSignature() {
 				return sig;
 			}
 
+			@Override
 			public Type[] getExceptionTypes() {
 				return ReflectUtils.getExceptionTypes(member);
 			}
@@ -612,15 +623,19 @@ public class ReflectUtils {
 		final Type type = Type.getType(clazz);
 		final Type sc = (clazz.getSuperclass() == null) ? null : Type.getType(clazz.getSuperclass());
 		return new ClassInfo() {
+			@Override
 			public Type getType() {
 				return type;
 			}
+			@Override
 			public Type getSuperType() {
 				return sc;
 			}
+			@Override
 			public Type[] getInterfaces() {
 				return TypeUtils.getTypes(clazz.getInterfaces());
 			}
+			@Override
 			public int getModifiers() {
 				return clazz.getModifiers();
 			}
@@ -630,8 +645,7 @@ public class ReflectUtils {
 	// used by MethodInterceptorGenerated generated code
 	public static Method[] findMethods(String[] namesAndDescriptors, Method[] methods) {
 		Map map = new HashMap();
-		for (int i = 0; i < methods.length; i++) {
-			Method method = methods[i];
+		for (Method method : methods) {
 			map.put(method.getName() + Type.getMethodDescriptor(method), method);
 		}
 		Method[] result = new Method[namesAndDescriptors.length / 2];
